# local-rag-chatbot

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  update.sh
docs/superpowers/plans/: 2026-07-13-local-rag-mini-agent.md
docs/superpowers/specs/: 2026-07-13-local-rag-mini-agent-design.md
src/: chat.py  config.py  documents.py  llama.py  main.py  models.py  parse_worker.py  rag.py
src/static/: script.js
src/templates/: index.html
tests/: conftest.py  test_agent_eval.py  test_api.py  test_chat.py  test_documents.py  test_llama.py  test_models.py  test_parse_worker.py  test_rag.py  test_ui_assets.py
tests/fixtures/: agent_cases.json
tests/helpers/: fake_parse_worker.py
