[project]
name = "chatbot"
version = "2.1.1"
description = "Local RAG Chatbot"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "bm25s>=0.3.9",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "liteparse>=2.5.1",
    "numpy>=2.5.1",
    "semantic-text-splitter>=0.32.0",
    "tokenizers>=0.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
